[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://font/BROADW.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://font/Cartoon_Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -153.0
margin_right = 153.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "Model Example"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="BtnContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.5
margin_top = -110.5
margin_right = 225.5
margin_bottom = 110.5

[node name="Mujer" type="Button" parent="BtnContainer"]
margin_right = 451.0
margin_bottom = 45.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.898039, 0.0392157, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.290196, 0.290196, 1 )
custom_fonts/font = SubResource( 2 )
text = "Woman"
flat = true

[node name="Orcos" type="Button" parent="BtnContainer"]
margin_top = 49.0
margin_right = 451.0
margin_bottom = 94.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.898039, 0.0392157, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.290196, 0.290196, 1 )
custom_fonts/font = SubResource( 2 )
text = "Orc"
flat = true

[node name="Cocodrilo" type="Button" parent="BtnContainer"]
margin_top = 98.0
margin_right = 451.0
margin_bottom = 143.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.898039, 0.0392157, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.290196, 0.290196, 1 )
custom_fonts/font = SubResource( 2 )
text = "Crocodile"
flat = true

[connection signal="pressed" from="BtnContainer/Mujer" to="." method="_on_Mujer_pressed"]
[connection signal="pressed" from="BtnContainer/Orcos" to="." method="_on_Orcos_pressed"]
[connection signal="pressed" from="BtnContainer/Cocodrilo" to="." method="_on_Cocodrilo_pressed"]
